@@ -20,14 +20,19 @@ $RUN_HOST $CC -shared -O2 -Wl,-z,nocombreloc -fpic -o reloc9lib2.so $srcdir/relo
 BINS="reloc9"
 LIBS="reloc9lib1.so reloc9lib2.so"
 $RUN_HOST $CCLINK -o reloc9 -Wl,-z,nocombreloc $NOCOPYRELOC $srcdir/reloc7.c -Wl,--rpath-link,. reloc9lib2.so -lc reloc9lib1.so
-savelibs
-echo $PRELINK ${PRELINK_OPTS--vm} ./reloc9 > reloc9.log
-$RUN_HOST $PRELINK ${PRELINK_OPTS--vm} ./reloc9 >> reloc9.log 2>&1 || exit 1
-grep -q ^`echo $PRELINK | sed 's/ .*$/: /'` reloc9.log && exit 2
+echo > reloc9.log
 if [ "x$CROSS" = "x" ]; then
- $RUN LD_LIBRARY_PATH=. ./reloc9 >> reloc9.log || exit 3
+ $RUN LD_LIBRARY_PATH=. ./reloc9 >> reloc9.log || exit 1
 fi
-$RUN_HOST $READELF -a ./reloc9 >> reloc9.log 2>&1 || exit 4
+$RUN_HOST $READELF -a ./reloc9 >> reloc9.log 2>&1 || exit 2
+savelibs
+echo $PRELINK ${PRELINK_OPTS--vm} ./reloc9 >> reloc9.log
+$RUN_HOST $PRELINK ${PRELINK_OPTS--vm} ./reloc9 >> reloc9.log 2>&1 || exit 3
+grep -q ^`echo $PRELINK | sed 's/ .*$/: /'` reloc9.log && exit 4
+if [ "x$CROSS" = "x" ]; then
+ $RUN LD_LIBRARY_PATH=. ./reloc9 >> reloc9.log || exit 5
+fi
+$RUN_HOST $READELF -a ./reloc9 >> reloc9.log 2>&1 || exit 6
 # So that it is not prelinked again
 chmod -x ./reloc9
-comparelibs >> reloc9.log 2>&1 || exit 5
+comparelibs >> reloc9.log 2>&1 || exit 7
